--- a/static/index.css
+++ b/static/index.css
@@ -10,3 +10,15 @@ header {
     text-align: center;
     padding: 1em 0;
 }
+
+a {
+    text-decoration: none;
+}
+
+.nav-bar {
+    flex-direction: row;
+}
+
+.option-text {
+   text-decoration: none;
+}
