--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Your Flask Website</title>
-    </head>
-    <body>
-        <h1> hello world</h1>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="My name is Avery Allen, a high school student passionate about computer science. Feel free to explore my projects and achievements. Enjoy browsing my page and discovering what it has to offer!">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css')}}">
+
+
+    <title>Avery's Website</title>
+
+</head>
+<body>
+    <div class="nav-bar">
+        <div class="option-text">
+            <a href="/about"> About Me</a>
+            <a href="/projects"> Projects</a>
+        </div>
+    </div>
+</body>
 </html>
