--- a/templates/projects.html
+++ b/templates/projects.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/about.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/projects.css')}}">
 
-
-    <title>About</title>
+    <title>Projects</title>
 </head>
 <body>
     
