--- a/templates/index.html
+++ b/templates/index.html
@@ -11,11 +11,11 @@
 
 </head>
 <body>
-    <div class="nav-bar">
-        <div class="option-text">
-            <a href="/about"> About Me</a>
-            <a href="/projects"> Projects</a>
-        </div>
-    </div>
+    <header class="header">
+        <nav class="nav-bar"  >
+            <a href="/about" class="option-text"> About Me</a>
+            <a href="/projects" class="option-text"> Projects</a>
+        </nav>
+    </header>
 </body>
 </html>
