Animations + About Page Addition

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -8,6 +8,14 @@
     <title>Projects</title>
 </head>
 <body>
-    
+    <header class="header">
+        <a href="/">
+            <img src="{{ url_for('static', filename='images/css/AAlogo.png') }}" alt="logo">
+        </a>
+        <nav class="nav-bar"  >
+            <a href="/about" class="option-text"> About Me</a>
+            <a href="/projects" class="option-text"> Projects</a>
+        </nav>
+    </header>
 </body>
 </html>
