--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
     <header class="header">
+        <a href="/">
+            <img src="{{ url_for('static', filename='static/css/images/css/AAlogo.png') }}" alt="logo">
+        </a>
         <nav class="nav-bar"  >
             <a href="/about" class="option-text"> About Me</a>
             <a href="/projects" class="option-text"> Projects</a>
