--- a/templates/projects.html
+++ b/templates/projects.html
@@ -10,11 +10,11 @@
 <body>
     <header class="header">
         <a href="/">
-            <img src="{{ url_for('static', filename='images/css/AAlogo.png') }}" alt="logo">
+            <img class="option-logo" src="{{ url_for('static', filename='images/AAlogo.png') }}" alt="logo">
         </a>
-        <nav class="nav-bar"  >
-            <a href="/about" class="option-text"> About Me</a>
-            <a href="/projects" class="option-text"> Projects</a>
+        <nav class="nav-bar" >
+            <a href="/about" class="nav-text">About Me</a>
+            <a href="/projects" class="nav-text">Projects</a>
         </nav>
     </header>
 </body>
