--- a/templates/index.html
+++ b/templates/index.html
@@ -13,12 +13,19 @@
 <body>
     <header class="header">
         <a href="/">
-            <img src="{{ url_for('static', filename='static/css/images/css/AAlogo.png') }}" alt="logo">
+            <img class="option-logo" src="{{ url_for('static', filename='images/AAlogo.png') }}" alt="logo">
         </a>
         <nav class="nav-bar"  >
-            <a href="/about" class="option-text"> About Me</a>
-            <a href="/projects" class="option-text"> Projects</a>
+            <a href="/about" class="nav-text">About Me</a>
+            <a href="/projects" class="nav-text">Projects</a>
         </nav>
     </header>
+    <button class="toggle-button" onclick="myFunction()"> Toggle playground mode </button>
+    <script> 
+        function myFunction() {
+            var element = document.body
+            element.classList.toggle("background-change");
+        }
+    </script>
 </body>
 </html>
