--- a/templates/about.html
+++ b/templates/about.html
@@ -21,16 +21,62 @@
     <button class="toggle-button" onclick="playgroundMode()">Toggle Playground Mode</button>
     <script>
         function playgroundMode() {
-            var element = document.querySelector(".content");
-            element.classList.toggle("alt-mode");
+            var elements = document.querySelectorAll('.content');
+            elements.forEach(function(element) {
+                element.classList.toggle("alt-mode");
+                element.classList.toggle("default-mode");
+            });
+            document.body.classList.toggle("background-change");
         }
     </script>
-
-    <div class="page-body">
-        <div class="content default-mode">
-            <p class="page-text"> Hello! My name is Avery Allen and I am working on this website to hone my skills and share things about me! x  x xx x x x x x x x x x x x x x x x x x x x x x x x x x x x x c x x x x x x x x x x x x xx x x x  XX  X XX X X  X XX X X X X  X XX X  XX X X X X X X X X  x x x x  x xxx x    x x x xx x x x x x x x xxx x x x x xX XX X X x </p>
+    <script>
+        const headerEl = document.querySelector('.header');
+        window.addEventListener('scroll', () => {
+            if (window.scrollY > 50) {
+                headerEl.classList.add('header-scrolled');
+            }
+            else if (window.scrollY <= 50) {
+                headerEl.classList.remove('header-scrolled');
+            }
+        });
+    </script>
+    <div class="page-row-section">
+        <div class="page-column-section">
+            <div class="content default-mode">
+                <p class="page-text"> Hello! My name is Avery Allen and I am working on this website to hone my skills and share things about me! x  x xx x x x x x x x x x x x x x x x x x x x x x x x x x x x x c x x x x x x x x x x x x xx x x x  XX  X XX X X  X XX X X X X  X XX X  XX X X X X X X X X  x x x x  x xxx x    x x x xx x x x x x x x xxx x x x x xX XX X X x </p>
+            </div>
+        </div>
+        <div class="page-column-section">
+            <div class="content default-mode">
+                <p class="page-text"> Hello! My x is Avery Allen and I am working on this website to hone my skills and share things about me! x  x xx x x x x x x x x x x x x x x x x x x x x x x x x x x x x c x x x x x x x x x x x x xx x x x  XX  X XX X X  X XX X X X X  X XX X  XX X X X X X X X X  x x x x  x xxx x    x x x xx x x x x x x x xxx x x x x xX XX X X x </p>
+            </div>
         </div>
     </div>
+    <div class="page-row-section">
+        <div class="page-column-section">
+            <div class="content default-mode">
+                <p class="page-text"> Hello! My e is Avery Allen and I am working on this website to hone my skills and share things about me! x  x xx x x x x x x x x x x x x x x x x x x x x x x x x x x x x c x x x x x x x x x x x x xx x x x  XX  X XX X X  X XX X X X X  X XX X  XX X X X X X X X X  x x x x  x xxx x    x x x xx x x x x x x x xxx x x x x xX XX X X x </p>
+            </div>
+        </div>
+        <div class="page-column-section">
+            <div class="content default-mode">
+                <p class="page-text"> Hello! My a is Avery Allen and I am working on this website to hone my skills and share things about me! x  x xx x x x x x x x x x x x x x x x x x x x x x x x x x x x x c x x x x x x x x x x x x xx x x x  XX  X XX X X  X XX X X X X  X XX X  XX X X X X X X X X  x x x x  x xxx x    x x x xx x x x x x x x xxx x x x x xX XX X X x </p>
+            </div>
+        </div>
+    </div>
+    <div class="page-row-section">
+        <div class="page-column-section">
+            <div class="content default-mode">
+                <p class="page-text"> Hello! My j is Avery Allen and I am working on this website to hone my skills and share things about me! x  x xx x x x x x x x x x x x x x x x x x x x x x x x x x x x x c x x x x x x x x x x x x xx x x x  XX  X XX X X  X XX X X X X  X XX X  XX X X X X X X X X  x x x x  x xxx x    x x x xx x x x x x x x xxx x x x x xX XX X X x </p>
+            </div>
+        </div>
+        <div class="page-column-section">
+            <div class="content default-mode">
+                <p class="page-text"> Hello! My b is Avery Allen and I am working on this website to hone my skills and share things about me! x  x xx x x x x x x x x x x x x x x x x x x x x x x x x x x x x c x x x x x x x x x x x x xx x x x  XX  X XX X X  X XX X X X X  X XX X  XX X X X X X X X X  x x x x  x xxx x    x x x xx x x x x x x x xxx x x x x xX XX X X x </p>
+            </div>
+        </div>
+    </div>
+    
     
 </body>
 </html>
