--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,9 @@
             <a href="/about" class="nav-text">About Me</a>
             <a href="/projects" class="nav-text">Projects</a>
         </nav>
+        <button class="toggle-button" onclick="myFunction()">Playground</button>
     </header>
-    <button class="toggle-button" onclick="myFunction()"> Toggle playground mode </button>
+
     <script> 
         function myFunction() {
             var element = document.body
