--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -5,38 +5,93 @@ body {
     background: beige;
 }
 
+
 .header {
-    background: #4F7942;
+    background: rgb(246, 246, 246);
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 75px;
+    padding: 20px 100px;
+    z-index: 2;
+    transition: all 0.4s;
+    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.15);
+    display: flex;
+    flex-direction: row;
+}
+
+.header-scrolled {
+    background: rgb(246, 246, 246, 0.85);
     position: fixed;
     left: 0;
     top: 0;
     width: 100%;
     padding: 20px 100px;
-    
-}
-
-a {
-    text-decoration: none;
+    z-index: 2;
 }
 
 .nav-bar {
     display: flex;
     flex-direction: row;
     padding-right: 100px;
+ 
 }
 
 .nav-text {
-   text-decoration: none;
-   margin-right: 15px;
-   color: beige;
+    text-decoration: none;
+    margin-right: 15px;
+    color: black;
+    margin-top: 50px;
+    margin-left: 40px;
 }
 
-.nav-text:hover{
-    color: white;
+.nav-text:hover {
+    color: rgb(72, 71, 71);
     cursor: pointer;
+    text-shadow: 0 0 40px rgb(0, 0, 0, 0.4);
 }
 
 .option-logo {
     width: 75px;
     height: 75px;
+    display: flex;
+}
+
+
+.toggle-button {
+    width: 150px;
+    height: 33px;
+    margin-left: 50%;
+    position: relative; 
+    border: none;
+    background-color: white;
+    color: black;
+    border-radius: 4px;
+    box-shadow: inset 0 0 0 pink;
+    transition: ease-out 0.3s;
+    outline: none;
+    align-self: center;
+}
+
+.toggle-button:hover {
+    box-shadow: inset 300px 0 0 0 pink;
+    cursor: pointer;
+}
+
+body {
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+    background: rgb(255,255,255);
+    margin-top: 300px;
+}
+
+.background-change{
+
+    background: pink;
+}
+
+a {
+    text-decoration: none;
 }
