--- a/templates/about.html
+++ b/templates/about.html
@@ -4,96 +4,86 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/about.css')}}">
-
-
-    <title>About</title>
+    
+    <title>Projects</title>
 </head>
 <body>
     <header class="header">
         <a href="/">
             <img class="option-logo" src="{{ url_for('static', filename='images/AAlogo.png') }}" alt="logo">
         </a>
-        <nav class="nav-bar">
+        <nav class="nav-bar" >
             <a href="/about" class="nav-text">About Me</a>
             <a href="/projects" class="nav-text">Projects</a>
         </nav>
-        <button class="toggle-button" onclick="playgroundMode()">Playground</button>
-
     </header>
-    <script>
-        function playgroundMode() {
-            var elements = document.querySelectorAll('.content');
-            elements.forEach(function(element) {
-                element.classList.toggle("alt-mode");
-                element.classList.toggle("default-mode");
-            });
-            document.body.classList.toggle("background-change");
-        }
-    </script>
-    <script>
-        const headerEl = document.querySelector('.header');
-        window.addEventListener('scroll', () => {
-            if (window.scrollY > 50) {
-                headerEl.classList.add('header-scrolled');
-            }
-            else if (window.scrollY <= 50) {
-                headerEl.classList.remove('header-scrolled');
-            }
-        });
+    <div class="image-container">
+        <div class="image-wrapper">
+            <div>
+                <img src="{{ url_for('static', filename='images/img1.jpeg')}}">
+            </div>
+            <div>
+                <img src="{{ url_for('static', filename='images/img2.jpeg')}}">
+            </div>
+            <div>
+                <img src="{{ url_for('static', filename='images/img3.jpeg')}}">
+            </div>
+            <div>
+                <img src="{{ url_for('static', filename='images/img4.jpeg')}}">
+            </div>
+        </div>
+    </div>
+    <div class="page-row-section">
+        <div class="page-column-section">
+            <div class="content">
+                <p class="page-text">
+                    What's Up, I'm Avery Allen! I am a High School Student at Anderson High School in Austin, and I am working on this website to hone my skills and share things about me. I am currently unemployed but I divulge in many hobbies including coding fun projects, like this one, playing tennis, working out, learning spanish, watching youtube vidoes, and of course hanging out with friends.
+                </p>
+            </div>
+        </div>
+    </div>
 
-        function checkVisibility() {
-            var elements = document.querySelectorAll('.selector-content');
-            elements.forEach(function(footerEl) {
-                const rect = footerEl.getBoundingClientRect();
-                if (rect.bottom <= (window.innerHeight + 10)) {
-                    footerEl.classList.add('visible-selector-content')
-                }
-                else {
-                    footerEl.classList.remove('visible-selector-content')
-                }
-            });
+    <div class="page-row-section">
+        <div class="page-column-section">
+            <div class="content">
+                <p class="page-text">
+                    I am currently trying to gain as much knowledge as I can while finding a passion that I truly love. I try to push my understanding of the world and the many facets between. I believe that with consistency, effort, and time, any amout of personal growth can be attained.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        const imageWrapper = document.querySelector('.image-wrapper');
+        const imageItems = document.querySelectorAll('.image-wrapper > *');
+        const imageLength = imageItems.length;
+        const perView = 3
+        let totalScroll = 0
+        const delay = 2500
+
+        imageWrapper.style.setProperty('--per-view', perView)
+        for(let i = 0; i < perView; i++) {
+            imageWrapper.insertAdjacentHTML('beforeend', imageItems[i].outerHTML)
         }
+
+        let autoScroll = setInterval(scrolling, delay)
         
-        window.addEventListener('scroll', checkVisibility);
-        window.addEventListener('resize', checkVisibility);
-        document.addEventListener('DOMContentLoaded', checkVisibility);
+        function scrolling() {
+            totalScroll++
+            if(totalScroll == imageLength + 1) {
+                clearInterval(autoScroll)
+                totalScroll = 1
+                imageWrapper.style.transition = '0s'
+                imageWrapper.style.left = '0'
+                autoScroll = setInterval(scrolling, delay)
+            }
+            const widthEl = document.querySelector('.image-wrapper > :first-child').offsetWidth + 24
+            imageWrapper.style.left = `-${totalScroll * widthEl}px`
+            imageWrapper.style.transition = '0.3s'
+
+        }
+
 
     </script>
-    <div class="page-row-section">
-        <div class="page-column-section">
-            <div class="selector-content">
-                <div class="content default-mode">
-                    <p class="page-text"> What's Up, I'm Avery Allen! I am a High School Student at Anderson High School in Austin, and I am working on this website to hone my skills and share things about me. I am currently unemployed but I divulge in many hobbies including coding fun projects, like this one, playing tennis, working out, watching youtube vidoes, and of course hanging out with friends. </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="page-row-section">
-        <div class="page-column-section">
-            <div class="selector-content">
-                <div class="content default-mode">
-                    <p class="page-text"> I am currently trying to gain as much knowledge as I can while finding a passion that I truly love. I try to push my understanding of the world and the many facets between. I believe that with consistency, effort, and time, any amout of personal growth can be attained.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="page-row-section">
-        <div class="page-column-section">
-            <div class="selector-content">
-                <div class="content default-mode">
-                    <p class="page-text"> Hello! My j is Avery Allen and I am working on this website to hone my skills and share things about me! x  x xx x x x x x x x x x x x x x x x x x x x x x x x x x x x x c x x x x x x x x x x x x xx x x x  XX  X XX X X  X XX X X X X  X XX X  XX X X X X X X X X  x x x x  x xxx x    x x x xx x x x x x x x xxx x x x x xX XX X X x </p>
-                </div>
-            </div>
-        </div>
-        <div class="page-column-section">
-            <div class="selector-content">
-                <div class="content default-mode">
-                    <p class="page-text"> Hello! My j is Avery Allen and I am working on this website to hone my skills and share things about me! x  x xx x x x x x x x x x x x x x x x x x x x x x x x x x x x x c x x x x x x x x x x x x xx x x x  XX  X XX X X  X XX X X X X  X XX X  XX X X X X X X X X  x x x x  x xxx x    x x x xx x x x x x x x xxx x x x x xX XX X X x </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    
-    
 </body>
 </html>
