--- a/templates/projects.html
+++ b/templates/projects.html
@@ -63,7 +63,9 @@
         <div class="page-column-section">
             <div class="selector-content">
                 <div class="content default-mode">
-                    <p class="page-text"> What's Up, I'm Avery Allen! I am a High School Student at Anderson High School in Austin, and I am working on this website to hone my skills and share things about me. I am currently unemployed but I divulge in many hobbies including coding fun projects, like this one, playing tennis, working out, watching youtube vidoes, and of course hanging out with friends. </p>
+                    <h1>Fistbump</h1>
+                    <p class="page-text"> Fistbump is an all ......... . . .  .. .  . .. . .  . . . . .. </p>
+                    img src="{{ url_for('static', filename='images/AAlogo.png')}}">
                 </div>
             </div>
         </div>
