--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -198,6 +198,11 @@ a {
     text-decoration: none;
 }
 
+img {
+    height: 50px;
+    width: 50px;
+}
+
 @keyframes animationOne {
     0% { transform: scale(1, 1); }
     100% { transform: scale(1.5, 0.75); }
